Add Aspire host.

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,6 @@ jobs:
       
       - name: Build
         run: dotnet build ./EthicalWalls.sln --configuration Release --no-restore
+      
+      - name: Docker Compose Up
+        run: docker compose -f ./.developer/docker-compose.yml up -d
