--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,9 +14,11 @@ jobs:
         uses: actions/setup-dotnet@v3
         with:
           dotnet-version: '8.x'
-      
+            
       - name: Install dependencies
-        run: dotnet restore ./EthicalWalls.sln
+        run: |
+          dotnet workload restore
+          dotnet restore ./EthicalWalls.sln
       
       - name: Build
         run: dotnet build ./EthicalWalls.sln --configuration Release --no-restore
