--- a/src/Aspire.AppHost/Properties/launchSettings.json
+++ b/src/Aspire.AppHost/Properties/launchSettings.json
@@ -5,11 +5,12 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:15219",
+      "applicationUrl": "https://localhost:15179;http://localhost:15178",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "DOTNET_ENVIRONMENT": "Development",
-        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "http://localhost:16073"
+        "DOTNET_DASHBOARD_OTLP_ENDPOINT_URL": "https://localhost:16224",
+        "DOTNET_RESOURCE_SERVICE_ENDPOINT_URL": "https://localhost:22123"
       }
     }
   }
