--- a/src/Aspire.AppHost/Aspire.AppHost.csproj
+++ b/src/Aspire.AppHost/Aspire.AppHost.csproj
@@ -13,4 +13,8 @@
         <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="8.0.0-preview.7.24251.11" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ClientManagement\ClientManagement.csproj" />
+    </ItemGroup>
+
 </Project>
