--- a/src/Aspire.AppHost/Aspire.AppHost.csproj
+++ b/src/Aspire.AppHost/Aspire.AppHost.csproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <PackageReference Include="Aspire.Hosting.AppHost" Version="8.0.0-preview.7.24251.11" />
+        <PackageReference Include="Aspire.Hosting.PostgreSQL" Version="8.0.0-preview.7.24251.11" />
         <PackageReference Include="Aspire.Hosting.RabbitMQ" Version="8.0.0-preview.7.24251.11" />
     </ItemGroup>
 
