--- a/src/ClientManagement/ClientManagement.csproj
+++ b/src/ClientManagement/ClientManagement.csproj
@@ -8,6 +8,12 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Aspire.ServiceDefaults\Aspire.ServiceDefaults.csproj" />
+      <ProjectReference Include="..\ClientManagement.Application\ClientManagement.Application.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-preview.7.24251.11" />
+      <PackageReference Include="Aspire.RabbitMQ.Client" Version="8.0.0-preview.7.24251.11" />
     </ItemGroup>
 
 </Project>
