--- a/src/ClientManagement/ClientManagement.csproj
+++ b/src/ClientManagement/ClientManagement.csproj
@@ -13,8 +13,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.0-preview.7.24251.11" />
-      <PackageReference Include="Aspire.RabbitMQ.Client" Version="8.0.0-preview.7.24251.11" />
+      <PackageReference Include="Aspire.Npgsql.EntityFrameworkCore.PostgreSQL" Version="8.0.1" />
+      <PackageReference Include="Aspire.RabbitMQ.Client" Version="8.0.1" />
       <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.9.1" />
     </ItemGroup>
 
